# seminario3_apnum

./: .gitignore  .latexmkrc  README.md  main.tex  metrovalencia4.py  pyproject.toml  tasks.py
resources/: ejemplo-paradas.csv  metrovalencia4-paradas.csv
slides/: caracterizacion.tex  condiciones.tex  ecuaciones.tex  ejemplo_parametrizacion.tex  metro.tex  metro_splines.tex  parametrizacion.tex  spline_completo.tex  spline_natural.tex  spline_periodico.tex  splines.tex
splinemaps/: __init__.py  maphandler.py
