[tool.poetry]
name = "splinemaps"
version = "0.1.0"
description = ""
authors = ["Mario Vago Marzal <mariovagomarzal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
sympy = "^1.12"
matplotlib = "^3.8.2"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
invoke = "^2.2.0"
pandas-stubs = "^2.1.1.230928"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
